syntax = "proto3";

package foodserver;

option java_multiple_files = true;
option java_package = "pt.ulisboa.tecnico.cmov.foodservice";

message Empty {}

message DiningOption {
    string name = 1;
    string openingHours = 2;
}

message GetFoodServicesRequest {
    string name = 1;
    string campus = 2;
    string status = 3;
}

message FoodService {
    string name = 1;
    string openingHours = 2;
    int64 queueTime = 3;
    double latitude = 4;
    double longitude = 5;
}

message GetDishesRequest {
    string foodServiceName = 1;
}

message Dish {
    string name = 1;
    int64 price = 2;
}

service FoodServer {
    rpc getDiningOptions(Empty) returns (stream DiningOption);
    rpc getFoodServices(GetFoodServicesRequest) returns (stream FoodService);
    rpc getDishes(GetDishesRequest) returns (stream Dish);
}
